2002-03-05 22:00
 RobustTransaction:
  - Created as outline based on Transaction
2002-03-04 00:30
 NonTransaction:
  - Created
 Test14:
  - Created
 Test15:
  - Created
 Transaction:
  - Made subclass of new abstract base class TransactionItf
 TransactionItf:
  - Created
 Transactor:
  - Made choice of transaction class parameterizable
2002-03-03 17:00
 Transactor:
  - Made Transaction class selectable, so can add more transaction types later
  - Added OnDoubt()
2002-03-03 16:15
 Connection:
  - In-doubt transactions are no longer retried
 Makefile:
  - Added /usr/include/postgresql/internal to include path
  - Works for PostgreSQL 7.1 and 7.2 now
 Transaction:
  - Introduced checking for in-doubt transactions
  - Minor improvements in error handling
2002-03-02 14:15
 TableReader:
  - Full test coverage
 Test6:
  - Added consistency check for TableReader's operator!()/operator bool()
 Test8:
  - Added consistency check for TableReader's GetRawLine()/Tokenize()
2002-03-01 00:45
 TableStream:
  - Full test coverage
2002-03-01 00:15
 TableWriter:
  - Full test coverage
 Test10:
  - Used TableWriter to insert tuple
2002-02-28 23:30
 Test13:
  - Created
 Transactor:
  - Full test coverage
2002-02-27 00:00
 Result:
  - Full test coverage
 Test12:
  - Created
2002-02-26 23:00
 Result:
  - Extended test coverage to metadata queries
 Test11:
  - Created
2002-02-24 22:00
 Result:
  - Documented method coverage
 Test10:
  - Disabled trace output
2002-02-24 05:00
 Transaction:
  - Full method coverage by self-test
  - Found recently introduced bug in implicit abort!
2002-02-24 04:00
 TableStream:
  - Documented method coverage
 TableReader:
  - Documented method coverage
 TableWriter:
  - Documented method coverage
 Test10:
  - Created
 Transaction:
  - Documented method coverage
  - Improved test coverage
 Transactor:
  - Documented method coverage
2002-02-24 01:30
 CONCEPT:
  - Removed unneeded old file
 Connection:
  - Full method coverage by self-test
 Cursor: