@@ -51,9 +51,10 @@ LIBOPT=-lpqxx
 
 
 EXECS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 \
-	test12 test13 test14 test15
+	test12 test13 test14 test15 test16 test17
 EXECOBJS=test1.o test2.o test3.o test4.o test5.o test6.o test7.o test8.o \
-	test9.o test10.o test11.o test12.o test13.o test14.o test15.o
+	test9.o test10.o test11.o test12.o test13.o test14.o test15.o \
+	test16.o test17.o
 LIBOBJS=pg_connection.o pg_cursor.o pg_nontransaction.o pg_result.o pg_robusttransaction.o \
 	pg_tablereader.o pg_tablestream.o pg_tablewriter.o pg_transaction.o \
 	pg_transactionitf.o
@@ -108,6 +109,12 @@ test14: test14.o $(LIBNAME)
 test15: test15.o $(LIBNAME)
 	$(LD) $(LDFLAGS) -o $@ $< $(LIBOPT) $(LOADLIBES)
 
+test16: test16.o $(LIBNAME)
+	$(LD) $(LDFLAGS) -o $@ $< $(LIBOPT) $(LOADLIBES)
+
+test17: test17.o $(LIBNAME)
+	$(LD) $(LDFLAGS) -o $@ $< $(LIBOPT) $(LOADLIBES)
+
 
 $(LIBNAME): $(LIBOBJS)
 	$(AR) -r $(LIBNAME) $(LIBOBJS)
@@ -128,6 +135,8 @@ check: $(EXECS)
 	./test13 $(CONNSTR)
 	./test14 $(CONNSTR)
 	./test15 $(CONNSTR)
+	./test16 $(CONNSTR)
+	./test17 $(CONNSTR)
 
 clean: 
 	$(RM) $(LIBOBJS) $(EXECOBJS) a.out
